clang/test/BSC/Negative/SafeZone/unsafe_implicit_conversion/unsafe_implicit_conversion.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#define NULL ((void*)0)

trait F {};
trait G {};
impl trait F for int;
impl trait G for int;

void diffPointCastConver(void) {
  _Unsafe {
    // int * <-> void *
    int *a = NULL;
    _Safe {
      void *b = a;  // expected-error{{conversion from type 'int *' to 'void *' is forbidden in the safe zone}}
      int *c = b;   // expected-error{{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // int * <-> double *
    double *a = NULL;
    _Safe {
      int *b = a;       // expected-error{{conversion from type 'double *' to 'int *' is forbidden in the safe zone}}
      double *c = b; // expected-error{{conversion from type 'int *' to 'double *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // struct1 * -> struct2*
    struct S1
    {
      int a;
    };
    struct S2
    {
      int b;
    };
    struct S1 *s1 = NULL;
    struct S2 *s2 = NULL;
    _Safe {
      struct S1* s1_1 = s2;  // expected-error{{conversion from type 'struct S2 *' to 'struct S1 *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // trait1* -> trait2*
    int m = 0;
    int *p = &m;
    trait F *f = &m;
    _Safe {
      trait G *h = (trait G*)p; //ok
      trait G *g = f; // expected-error{{conversion from type 'trait F *' to 'trait G *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // owned *<-> raw *
    int *pa = NULL;
    _Safe {
      int *owned p1 = pa;   // expected-error{{conversion from type 'int *' to 'int *owned' is forbidden in the safe zone}}
      pa = p1;                    // expected-error{{conversion from type 'int *owned' to 'int *' is forbidden in the safe zone}}
    }
  }
  // _Borrow -> raw  (waiting complement...)
}

void pointCastConver() {
  // int * <-> int
  _Safe {
    int a = 1;
    int *b = a;       // expected-error{{conversion from type 'int' to 'int *' is forbidden in the safe zone}}
    int c = b;          // expected-error{{conversion from type 'int *' to 'int' is forbidden in the safe zone}}
  }
  // void * <-> int
  _Safe {
    int a = 1;
    void *b = a;     // expected-error{{conversion from type 'int' to 'void *' is forbidden in the safe zone}}
    int c = b;          // expected-error{{conversion from type 'void *' to 'int' is forbidden in the safe zone}}
  }
  // owned int * <-> int
  _Safe {
    int a = 1;
    int *owned p1 = a;   // expected-error{{conversion from type 'int' to 'int *owned' is forbidden in the safe zone}}
    a = p1;                      // expected-error{{conversion from type 'int *owned' to 'int' is forbidden in the safe zone}}
  }
  // _Borrow int * -> int  (waiting complement...)
}

void baseTypeCastConver() {
  // long <-> int,
  _Safe {
    long a = 2;
    int b = a;                 // expected-error{{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    long c = b;               // int->long ok
    // int -2147483648～2147483647
    constexpr long _a = 10;
    int _b = _a;               // ok
    constexpr long _a_ = 2147483648;
    int _b_ = _a_;             // expected-error{{implicit conversion from type 'const long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    int d = 2147483647;        // int->int ok
    d = 2147483648;            // expected-error{{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    d = -2147483649;                // expected-error{{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    // unsigned_int 0~4294967295
    unsigned int e = 0;             // ok
    e = 4294967296;   // expected-error{{implicit conversion from type 'long' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    unsigned long f = 1;            // ok
    f = b;           // expected-error{{implicit conversion from type 'int' to 'unsigned long' is forbidden in the safe zone; please use explicit cast or other means instead}}
    f = -1;          // expected-error{{implicit conversion from type 'int' to 'unsigned long' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }
  // int <-> char
  _Safe {
    int a = 1;
    // char -128~127
    char b = a;                // expected-error{{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
    b = 1;                     // ok
    b = 128;                   // expected-error{{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
    b = _Unsafe(1);             // ok
    b = _Safe(1);               // ok
    b = _Unsafe(128);           // expected-error{{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
    b = _Safe(128);             // expected-error{{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}

    constexpr int c = 10;
    b = c;
    a = b;                      // char->int ok
    a = 'b';                    // char->int ok
    a = _Unsafe(b);              // ok
    a = _Safe(b);                // ok
    unsigned int d = 0;
    d = b;             // expected-error{{implicit conversion from type 'char' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }
  // int <-> bool
  _Safe {
    _Bool a = 0;
    int b = a;          // ok
    _Bool c = b;      // expected-error{{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
    c = 1;
    c = 2;            // expected-error{{implicit conversion from type 'int' to '_Bool' is forbidden in the safe zone; please use explicit cast or other means instead}}
    c = _Unsafe(1);
    c = _Safe(1);
  }
  // char <-> long double
  _Safe {
    char a = 'A';
    long double b = a;  // expected-error{{implicit conversion from type 'char' to 'long double' is forbidden in the safe zone; please use explicit cast or other means instead}}
    char c = b;         // expected-error{{conversion from type 'long double' to 'char' is forbidden in the safe zone}}
  }
  // int <-> enum
  enum E {
    ZERO,
    ONE,
    TWO,
  };
  enum F {
    SUN,
    MON,
    TUES,
  };
  _Safe {
    int a = 0;
    enum E num = a;     // expected-error{{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
    num = 0;            // expected-error{{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
    num = ZERO;         // ok
    num = _Safe(ZERO);   // ok
    num = _Unsafe(ZERO); // ok
    enum F day = SUN;
    num = day;          // expected-error{{implicit conversion from type 'enum F' to 'enum E' is forbidden in the safe zone; please use explicit cast or other means instead}}
    num = SUN;          // expected-error{{conversion from type 'enum F' to 'enum E' is forbidden in the safe zone}}
    a = num;            // ok: enum E -> int implicit allowed
    a = ZERO;
    num = _Safe(day);    // expected-error{{implicit conversion from type 'enum F' to 'enum E' is forbidden in the safe zone; please use explicit cast or other means instead}}
    num = _Safe(SUN);    // expected-error{{conversion from type 'enum F' to 'enum E' is forbidden in the safe zone}}
    num = _Unsafe(day);  // expected-error{{implicit conversion from type 'enum F' to 'enum E' is forbidden in the safe zone; please use explicit cast or other means instead}}
    num = _Unsafe(SUN);  // expected-error{{conversion from type 'enum F' to 'enum E' is forbidden in the safe zone}}
    enum F f1 = a > 0 ? SUN : MON;   // ok
    enum F f2 = a == 0 ? SUN : MON;  // ok
    enum F f3 = a > 0 ? SUN : ZERO;  // expected-error{{conversion from type 'enum E' to 'enum F' is forbidden in the safe zone}}
    enum F f4 = a > 0 ? ZERO : SUN;  // expected-error{{conversion from type 'enum E' to 'enum F' is forbidden in the safe zone}}
  }
  // double <-> float
  _Safe {
    double a = 1.0;
    float b = a;      // expected-error{{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
    a = b;            // ok
    float c = 1.0;    // ok
    c = 1.2;          // expected-error{{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
    c = 1.2f;         // ok
  }
  // int <-> unsigned int
  _Safe {
    unsigned int a = 1;  // ok
    int b = a;           // expected-error{{implicit conversion from type 'unsigned int' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    a = b;               // expected-error{{implicit conversion from type 'int' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
    a = -1;              // expected-error{{implicit conversion from type 'int' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }
}

_Safe void returns_void(void);
_Safe void test_void_conversion(void) {
  int x = returns_void();  // expected-error{{conversion from type 'void' to 'int' is forbidden in the safe zone}}
}
